[package]
name = "tpl"
version = "0.1.1"
description = "Render templated dotfiles using data sourced from a number of locations"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = {version = "4.5.17", features = ["derive"]}
directories = "5.0.1"
minijinja = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
ctrlc = "3.4.5"
toml = "0.8.19"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
env_logger = "0.11.5"
log = "0.4.22"
clap-verbosity-flag = "2.2.1"
notify-debouncer-full = "0.3.1"
humantime = "2.1.0"
